# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.641 2006/07/05 13:59:18 wolf31o2 Exp $

  05 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd/cdtar/silo-1.2.6-sparc-cdtar.tar.bz2,
  +livecd/cdtar/silo-1.4.13-sparc-cdtar.tar.bz2,
  targets/support/bootloader-setup.sh:
  Added patch from Gustavo Zacarias <gustavoz@gentoo.org> for sparc/silo
  parameters support. This is for bug #139300.

  28 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  modules/generic_stage_target.py, modules/livecd_stage2_target.py,
  targets/support/filesystem-functions.sh:
  Added two patches from Joshua Kinard from bug #138255 to fix livecd/fsops
  and also to remove some redundant values from livecd-stage2's valid_values.
  This is 2.0_rc49.

  28 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> arch/ppc.py,
  arch/x86.py:
  Fixed invocation of linux32 for x86 and ppc.  This is for bug #138080.

  22 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Fix a problem where catalyst was creating an initial list, then putting that
  list inside another. Thanks to Andrew Gaffney <agaffney@gentoo.org> for
  pointing it out and for the fix. This is for bug #136351.

  22 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/unmerge.sh:
  Removing loop for unmerge, as it didn't actually solve anything and the
  portage team has helped us out by reverting the behavior that caused this
  change in the first place.

  21 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  modules/netboot2_target.py, modules/stage1_target.py,
  targets/netboot2/netboot2-copyfile.sh, targets/support/pre-kmerge.sh:
  Added two patches from Joshua Kinard <kumba@gentoo.org> to fix stage1 not
  having /proc mounted during the preclean stage and also to clean up the
  netboot2 code. This is 2.0_rc48.

  20 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>