@@ -12,24 +12,24 @@ serial="serial {\n\
 \t\tport1 {\n\
 \t\t\tdescription\t\"Serial Console, Port 1, 9600 Baud\";\n\
 \t\t\timage\t\t\"\";\n\
-\t\t\tappend\t\t\"console=ttyS0,9600\";\n\
+\t\t\tappend\t\t\"console=ttyS0,9600\" \"nox\";\n\
 \t\t}\n\n\
 \t\tport2 {\n\
 \t\t\tdescription\t\"Serial Console, Port 2, 9600 Baud\";\n\
 \t\t\timage\t\t\"\";\n\
-\t\t\tappend\t\t\"console=ttyS1,9600\";\n\
+\t\t\tappend\t\t\"console=ttyS1,9600\" \"nox\";\n\
 \t\t}\n\
 \t}\n\n\
 \tbaud=38400 {\n\
 \t\tport1 {\n\
 \t\t\tdescription\t\"Serial Console, Port 1, 38400 Baud\";\n\
 \t\t\timage\t\t\"\";\n\
-\t\t\tappend\t\t\"console=ttyS0,38400\";\n\
+\t\t\tappend\t\t\"console=ttyS0,38400\" \"nox\";\n\
 \t\t}\n\n\
 \t\tport2 {\n\
 \t\t\tdescription\t\"Serial Console, Port 2, 38400 Baud\";\n\
 \t\t\timage\t\t\"\";\n\
-\t\t\tappend\t\t\"console=ttyS1,38400\";\n\
+\t\t\tappend\t\t\"console=ttyS1,38400\" \"nox\";\n\
 \t\t}\n\
 \t}\n\
 }\n\n\n"
@@ -37,7 +37,7 @@ serial="serial {\n\
 dbg="debug {\n\
 \tdescription\t\"Debug Shell\";\n\
 \timage\t\t\"\";\n\
-\tappend\t\t\"real_root=shell\";\n}\n\n"		
+\tappend\t\t\"real_root=shell\" \"nox\";\n}\n\n"		
 
 cmt1="comment\t\t\"\\\n\\\n\";\n\
 comment\t\t\"Bootable Images & Options:\\\n\\\r\\\n\\\r\";\n"
@@ -45,7 +45,7 @@ comment\t\t\"Bootable Images & Options:\\\n\\\r\\\n\\\r\";\n"
 ip22base="# IP22 R4x00 Systems (Indy/Indigo2)\n\
 ip22 {\n\
 \tdescription\t\"SGI Indy/Indigo2\";\n\
-\tappend\t\t\"real_root=/dev/sr0\" \"cdroot=/dev/loop0\" \"looptype=sgimips\" \"nox\" \"nosound\";\n"
+\tappend\t\t\"real_root=/dev/sr0\" \"cdroot=/dev/loop0\" \"looptype=sgimips\" \"nosound\";\n"
 
 ip22r4k="\tr4000 r4600 r4700 {\n\
 \t\tdescription\t\"\\\tR4x00 CPU\";\n\
@@ -59,7 +59,7 @@ ip22r5k="\tr5000 {\n\
 
 ip22vid="\tvideo {\n\
 \t\tdescription\t\"\\\tNewport Console\\\n\\\r\";\n\
-\t\tappend\t\t\"console=tty0\";\n\
+\t\tappend\t\t\"console=tty0\" \"ip22\";\n\
 \t}\n"
 
 ip22x="}\n\n\n"
@@ -75,32 +75,37 @@ ip28base="# IP28 Indigo2 Impact R10000\n\
 ip28 {\n\
 \tdescription\t\"SGI Indigo2 Impact R10000\\\n\\\r\";\n\
 \timage system\t\"/ip28r10k\";\n\
-\tappend\t\t\"real_root=/dev/sr0\" \"cdroot=/dev/loop0\" \"looptype=sgimips\" \"nox\" \"nosound\";\n\
+\tappend\t\t\"real_root=/dev/sr0\" \"cdroot=/dev/loop0\" \"looptype=sgimips\" \"nosound\" \"ip28\";\n\
 }\n\n\n"
 
 ip30base="# IP30 Octane\n\
 ip30 {\n\
 \tdescription\t\"SGI Octane\";\n\
 \timage system\t\"/ip30r10k\";\n\
-\tappend\t\t\"real_root=/dev/sr0\" \"cdroot=/dev/loop0\" \"looptype=sgimips\" \"nox\" \"nosound\";\n\n\
+\tappend\t\t\"real_root=/dev/sr0\" \"cdroot=/dev/loop0\" \"looptype=sgimips\" \"nosound\" \"ip30\";\n\n\
 \tnosmp {\n\
 \t\tdescription\t\"\\\tUniprocessor Mode\";\n\
 \t\tappend\t\t\"nosmp\";\n\
 \t}\n\n\
 \tvideo {\n\
 \t\tdescription\t\"\\\tImpactSR/VPro Console\\\n\\\r\";\n\
-\t\tappend\t\t\"console=tty0\";\n\
+\t\tappend\t\t\"console=tty0\" \"ip30\";\n\
 \t}\n\
 }\n\n\n"
 
 ip32base="# IP32 O2\n\
 ip32 {\n\
 \tdescription\t\"SGI O2\";\n\
-\tappend\t\t\"real_root=/dev/sr0\" \"cdroot=/dev/loop0\" \"looptype=sgimips\" \"nox\" \"nosound\";\n"
+\tappend\t\t\"real_root=/dev/sr0\" \"cdroot=/dev/loop0\" \"looptype=sgimips\" \"nosound\";\n"
 
-ip32r5k="\tr5000 rm5200 {\n\
-\t\tdescription\t\"\\\tR5000/RM5200 CPU\";\n\
+ip32r5k="\tr5000 {\n\
+\t\tdescription\t\"\\\tR5000 CPU\";\n\
 \t\timage system\t\"/ip32r5k\";\n\
+\t}\n"
+
+ip32rm5k="\trm5200 {\n\
+\t\tdescription\t\"\\\tRM5200 CPU\";\n\
+\t\timage system\t\"/ip32rm5k\";\n\
 \t}\n"
 
 ip32rm7k="\trm7000 {\n\
@@ -115,19 +120,19 @@ ip32r10k="\tr10000 r12000 {\n\
 
 ip32vid="\tvideo=640x480 {\n\
 \t\tdescription\t\"\\\tGBEFB Console 640x480 16bpp/75Hz\";\n\
-\t\tappend\t\t\"console=tty0 video=gbefb:640x480-16@75\";\n\
+\t\tappend\t\t\"console=tty0 video=gbefb:640x480-16@75\" \"ip32\";\n\
 \t}\n\n\
 \tvideo=800x600 {\n\
 \t\tdescription\t\"\\\tGBEFB Console 800x600 16bpp/75Hz\";\n\
-\t\tappend\t\t\"console=tty0 video=gbefb:800x600-16@75\";\n\
+\t\tappend\t\t\"console=tty0 video=gbefb:800x600-16@75\" \"ip32\";\n\
 \t}\n\n\
 \tvideo=1024x768 {\n\
 \t\tdescription\t\"\\\tGBEFB Console 1024x768 16bpp/75Hz\";\n\
-\t\tappend\t\t\"console=tty0 video=gbefb:1024x768-16@75\";\n\
+\t\tappend\t\t\"console=tty0 video=gbefb:1024x768-16@75\" \"ip32\";\n\
 \t}\n\n\
 \tvideo=1280x1024 {\n\
 \t\tdescription\t\"\\\tGBEFB Console 1280x1024 16bpp/75Hz\\\n\\\r\\\n\\\r\\\n\\\r\";\n\
-\t\tappend\t\t\"console=tty0 video=gbefb:1280x1024-16@75\";\n\
+\t\tappend\t\t\"console=tty0 video=gbefb:1280x1024-16@75\" \"ip32\";\n\
 \t}\n"
 
 ip32x="}\n\n\n"
