@@ -1,5 +1,12 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.641 2006/07/05 13:59:18 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.642 2006/07/11 21:40:58 wolf31o2 Exp $
+
+  11 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
+  modules/generic_stage_target.py, targets/support/bootloader-setup.sh,
+  targets/support/create-iso.sh, targets/support/kmerge.sh,
+  targets/support/livecdfs-update.sh, targets/support/mips-arcload_conf.sh:
+  Added patches from Joshua Kinard <kumba@gentoo.org> from bug #139337. This
+  is 2.0_rc50, which will hopefully be renamed without incident to 2.0 final.
 
   05 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   -livecd/cdtar/silo-1.2.6-sparc-cdtar.tar.bz2,
